debug micropost browsing

--- a/newebe/client/app/views/styles/_micropost.styl
+++ b/newebe/client/app/views/styles/_micropost.styl
@@ -13,11 +13,20 @@
     .micropost
         border-top: 1px solid #DDD
 
+        .left
+            img
+                width: 20px
+
         div
             padding: 0
 
         .micropost-attachments
             display: none
+
+        .infos
+            .tags
+                color: #888
+                font-weight: bold
 
     .author
         font-weight: bold
