--- a/newebe/client/app/views/templates/micropost.jade
+++ b/newebe/client/app/views/templates/micropost.jade
@@ -1,11 +1,12 @@
 .infos.small
     span.author #{model.author}
     span.verb #{model.verb}
+    span.tags.smaller #{model.tags}
 .line.pl0
     .pt05.w40.mod.left
         | !{model.displayContent}
-    
 span.date.smaller #{model.displayDate}
+    
 .micropost-buttons
     button.micropost-delete-button delete
     button.micropost-save-to-note-button save to note
