add picture page

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -87,3 +87,14 @@ body
 
 .error
     cursor: pointer
+
+.picture
+    cursor: pointer
+
+.picture.selected
+    background: blue + 40%
+
+.picture-buttons
+    button
+        padding: 3px
+        font-size: 12px
