--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -3,6 +3,10 @@ nav#navigation.hidden
         li
             a#microposts-button.active(href="#microposts") news
         li
+            a#pictures-button.active(href="#pictures") pictures
+        //li
+        //    a#notes-button.active(href="#commons") commons
+        li
             a#notes-button.active(href="#notes") notes
         li
             a#contacts-button(href="#contacts") contacts
