--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -3132,6 +3132,16 @@ body,
 .error {
   cursor: pointer;
 }
+.picture {
+  cursor: pointer;
+}
+.picture.selected {
+  background: #ebf5ff;
+}
+.picture-buttons button {
+  padding: 3px;
+  font-size: 12px;
+}
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
