--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -79,6 +79,7 @@ body
     border-radius: 10px
     font-family: robotic, main
 
+
 #note-selector-widget
     height: 320px
 
@@ -88,8 +89,19 @@ body
 .error
     cursor: pointer
 
+
+#pictures
+    .row
+        vertical-align: middle
+
 .picture
+    top: 0
+    bottom: 0
     cursor: pointer
+    display: table-cell
+    text-align: center
+    vertical-align: middle
+    height: 100%
 
 .picture.selected
     background: blue + 40%
