--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -4,8 +4,8 @@ nav#navigation.hidden
             a#microposts-button.active(href="#microposts") news
         li
             a#pictures-button.active(href="#pictures") pictures
-        //li
-        //    a#notes-button.active(href="#commons") commons
+        li
+            a#notes-button.active(href="#commons") commons
         li
             a#notes-button.active(href="#notes") notes
         li
