improve common list styles

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -109,3 +109,19 @@ body
     button
         padding: 3px
         font-size: 12px
+
+#commons
+    margin-top: 10px
+    cursor: pointer
+
+.common
+    padding: 5px 20px
+
+    button
+        padding: 3px
+
+#more-commons
+    margin-left: 15px
+
+.common.selected
+    background: blue + 40%
