--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -3090,6 +3090,22 @@ body,
   padding: 3px;
   font-size: 12px;
 }
+#commons {
+  margin-top: 10px;
+  cursor: pointer;
+}
+.common {
+  padding: 5px 20px;
+}
+.common button {
+  padding: 3px;
+}
+#more-commons {
+  margin-left: 15px;
+}
+.common.selected {
+  background: #ebf5ff;
+}
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
