add realtime contact update

--- a/newebe/client/app/views/templates/contact.jade
+++ b/newebe/client/app/views/templates/contact.jade
@@ -1,6 +1,6 @@
 .contact-tags.mod.left
 .name.mod.left 
-    a(href=model.url) #{model.name}
+    a(href="#{model.url}") #{model.name}
 if model.state != "Trusted"
     .state.mod.left #{model.state}
 
