debug note widget overflow

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -58,9 +58,10 @@ body
     left: 0
     bottom: 0
     right: 0
+    overflow: auto
 
     .note-selector-line
-        padding 5px 10px
+        padding: 5px 10px
 
     .note-selector-line:hover
         background: purple
