--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -3135,6 +3135,7 @@ body,
   left: 0;
   bottom: 0;
   right: 0;
+  overflow: auto;
 }
 #alert-widget .note-selector-line,
 #note-selector-widget .note-selector-line {
