add a responsive menu for low resolution

--- a/newebe/client/app/views/styles/_navigation.styl
+++ b/newebe/client/app/views/styles/_navigation.styl
@@ -27,4 +27,5 @@
             transition: background-color 200ms linear
             color: #DEF - 80%
 
-
+    li#responsive-menu
+        display: none
