--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -1,4 +1,6 @@
 nav#navigation.hidden
+    li#responsive-menu
+        a menu
     ul
         li
             a#microposts-button.active(href="#microposts") news
