add uppercase to page title

--- a/newebe/apps/core/templates/base.html
+++ b/newebe/apps/core/templates/base.html
@@ -6,11 +6,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Newebe, freedom to share</title>
+        <title>Newebe, Freedom to Share</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
         <!--script>
             // Enable Brunch HTML/CSS Auto Reload
