--- a/newebe.styl
+++ b/newebe.styl
@@ -1,32 +1,45 @@
+@font-face
+    font-family: main
+    src: url('fonts/open-sans-regular.ttf')
+
+@font-face
+    font-family: robotic
+    src: url('fonts/andale-mono.ttf')
+
 body
-  font-family: "sans-serif"
+  font-family: main, "sans-serif"
   color: black
   margin: 0
 
 #container
   background-color: white
   margin: 0 auto
+  padding: 20px 0
   width: 700px
 
 h1
-  font-size: 3.8em
+  font-size: 4em
   margin: 0 0 3px 0
+  font-family: robotic
+  font-weight: bold
+  text-align: center
 
 h2
-  font-size: 1.3em
-  margin-top: 35px
+  font-size: 1.8em
+  margin-top: 55px
   font-variant: small-caps
+  font-family: robotic
 
 h3
-  margin-top: 25px
-  font-size: 1.1em
+  margin-top: 35px
+  font-size: 1.4em
   font-variant: small-caps
   text-transform: lowercase
+  font-family: robotic
 
 a
   color: black
   font-weight: bold
-  text-decoration: none
 
 pre
   background: #DDEFFF
@@ -44,34 +57,20 @@ img
 li
   list-style-type: square
 
+.center
+  text-align: center
+
 .spacer 
   clear both
+
+.downloads
+    padding: 20px 0
 
 span.step
   font-weight: bold
   color: #555
   font-size: 0.8em
   margin-right: 10px
-
-#logo
-  float: left
-
-#download-text
-  margin-top: 135px
-
-#download-text span
-  font-size: 8px
-
-#slogan
-  margin: 0 0 0 0
-  font-variant: small-caps
-  color: white
-
-.description
-  font-style: italic
-  margin-bottom: 3px
-  font-size: 12px
-  padding: 10px
 
 #download
   padding: 10px #468856
@@ -103,16 +102,19 @@ span.step
   font-size: 1.2em
   font-variant: small-caps
   border-bottom: 0px solid black
-  margin-top: 10px
   color: white
   background-color: black
+  position: fixed
+  margin: 0
+  top: 0
 
 #menu li
-  display: inline
   padding: 0px 10px 0px 0
+  list-style-type: none
 
 #menu a
   color: white
+  text-decoration: none
 
 #menu a:hover
   border-bottom: 5px solid white
