--- a/newebe.styl
+++ b/newebe.styl
@@ -72,6 +72,18 @@ li
 .downloads
     padding: 20px 0
 
+a.button
+    background: #E67E22
+    transition: background-color 200ms linear 0s
+    text-decoration: none
+    padding: 10px
+    margin: 10px
+    color: white
+
+a.button:hover
+    background: #AD2BAD
+
+
 span.step
   font-weight: bold
   color: #555
