put search field back

--- a/newebe/client/app/views/templates/microposts.jade
+++ b/newebe/client/app/views/templates/microposts.jade
@@ -8,6 +8,8 @@ div
         input#attach-picture(type="file")
         #preview-list.line
 .line
+    input#microposts-search(placeholder="search...")
+.line
     #micropost-tag-list.tag-list
 .line
     #micropost-all
