--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -373,6 +373,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
 /* === Editor === */
 .etch-editor-panel { display: none; padding: 5px; position: absolute; z-index: 10000;
     background: #dadada; border: 1px solid #bdbdbd; color: #535353; text-shadow: 0 1px 0 #fff;
@@ -411,6 +412,7 @@ table {
 .etch-editor-panel .etch-cite span { background-position: -330px 0; }
 .etch-editor-panel .etch-heading span { background-position: -360px 0; }
 .etch-editor-panel .etch-clear-formatting span { background-position: -390px 0; }
+
 
   
 
@@ -1308,6 +1310,7 @@ I think you should use an
   </body>
 </html>
 
+
 /*  Font Awesome
     the iconic font designed for use with Twitter Bootstrap
     -------------------------------------------------------
@@ -1611,6 +1614,7 @@ li[class^="icon-"].icon-large:before, li[class*=" icon-"].icon-large:before {
 .icon-paste:before                { content: "\f0ea"; }
 
 .icon-user-md:before              { content: "\f200"; }
+
 /*
  * www.KNACSS.com V2.3 @author: Raphael Goetter, Alsacreations
  * Licence CC-BY http://creativecommons.org/licenses/by/3.0/fr/
@@ -2159,7 +2163,8 @@ label {
 	body {
 		-webkit-text-size-adjust: 100%;
 	}
-}/* nav.css : styles de base pour une navigation responsive.
+}
+/* nav.css : styles de base pour une navigation responsive.
 Attention : ne fonctionne pas toujours très bien sur les anciens navigateurs ou OS mobiles (par exemple Android 2.1) */
 
 label[for^="toggle"],
@@ -2242,6 +2247,7 @@ label[for^="toggle"] + [type="checkbox"] { display: none; }
 		text-decoration: none;
 	}
 }
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -2400,123 +2406,91 @@ input {
   height: 100%;
 }
 @-moz-keyframes fadein {
-  0% {
+  from {
     opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
   }
-
-  100% {
+  to {
     opacity: 1;
     -ms-filter: none;
     filter: none;
   }
 }
 @-webkit-keyframes fadein {
-  0% {
+  from {
     opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
   }
-
-  100% {
+  to {
     opacity: 1;
     -ms-filter: none;
     filter: none;
   }
 }
 @-o-keyframes fadein {
-  0% {
+  from {
     opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
   }
-
-  100% {
-    opacity: 1;
-    -ms-filter: none;
-    filter: none;
-  }
-}
-@-ms-keyframes fadein {
-  0% {
-    opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    filter: alpha(opacity=0);
-  }
-
-  100% {
+  to {
     opacity: 1;
     -ms-filter: none;
     filter: none;
   }
 }
 @keyframes fadein {
-  0% {
+  from {
     opacity: 0;
-    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
   }
-
-  100% {
+  to {
     opacity: 1;
     -ms-filter: none;
     filter: none;
   }
 }
 @-moz-keyframes pullin {
-  0% {
+  from {
     -webkit-box-shadow: 0;
     box-shadow: 0;
   }
-
-  100% {
-    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
-    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  to {
+    -webkit-box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
   }
 }
 @-webkit-keyframes pullin {
-  0% {
+  from {
     -webkit-box-shadow: 0;
     box-shadow: 0;
   }
-
-  100% {
-    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
-    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  to {
+    -webkit-box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
   }
 }
 @-o-keyframes pullin {
-  0% {
+  from {
     -webkit-box-shadow: 0;
     box-shadow: 0;
   }
-
-  100% {
-    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
-    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
-  }
-}
-@-ms-keyframes pullin {
-  0% {
-    -webkit-box-shadow: 0;
-    box-shadow: 0;
-  }
-
-  100% {
-    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
-    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  to {
+    -webkit-box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
   }
 }
 @keyframes pullin {
-  0% {
+  from {
     -webkit-box-shadow: 0;
     box-shadow: 0;
   }
-
-  100% {
-    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
-    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  to {
+    -webkit-box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
   }
 }
 @font-face {
@@ -2542,7 +2516,7 @@ input {
 [data-state~="disabled"],
 cursor not-allowed {
   opacity: 0.5;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   filter: alpha(opacity=50);
   -webkit-transition: opacity 0.2s linear;
   -moz-transition: opacity 0.2s linear;
@@ -2703,6 +2677,10 @@ cursor not-allowed {
 }
 #microposts-view .tag-list div {
   float: left;
+}
+#microposts-view #microposts-search {
+  font-size: 12px;
+  margin-left: 5px;
 }
 .note-buttons {
   display: none;
@@ -3219,6 +3197,7 @@ body,
 .common.selected {
   background: #ebf5ff;
 }
+
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
@@ -3244,3 +3223,6 @@ body,
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3 { page-break-after: avoid; }
 }
+
+
+/*# sourceMappingURL=app.css.map*/
