put back rotation

--- a/newebe/client/app/views/templates/picture.jade
+++ b/newebe/client/app/views/templates/picture.jade
@@ -5,3 +5,4 @@
     | #{model.author} - #{model.displayDate}
     span.picture-buttons
         button.picture-delete-button delete
+        button.picture-rotate-button rotate right
